--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "cryptocompare": "^1.0.0",
+    "fuzzy": "^0.1.3",
     "loads": "^0.0.4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
