--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highcharts": "^16.1.0",
     "react-scripts": "4.0.3",
     "styled-components": "4.0.2",
     "web-vitals": "^1.0.1"
