--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fuzzy": "^0.1.3",
     "loads": "^0.0.4",
     "lodash": "^4.17.21",
+    "moments": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-highcharts": "^16.1.0",
